--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
 </head>
 <body>
     <h1>Teste</h1>
+
+    <ion-icon name="heart"></ion-icon>
+    <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
 </body>
 </html>
